# quantum-error-correction

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.hf  Makefile  README_HF.md  RL_EXPERIMENTS.md  Readme.md  SECURITY.md  environment.yml  pyproject.toml  repository_analysis.md  requirements-qec.txt  requirements.txt  rl_experiments.py  rl_nested_learning.py  run_app.sh  run_scripts.sh
.cursor/: settings.json
.cursor/agents/: circuit-engineer.md  github-actions-tester.md  ml-rl-architect.md  qec-researcher.md  scientific-plotter.md
.cursor/rules/: circuit_engineer.md  ml_rl_architect.md  qec_researcher.md  scientific_plotter.md
.github/: copilot-instructions.md
.github/instructions/: *.instructions.md  python-code.instructions.md  tests.instructions.md
.github/workflows/: tests.yml
.streamlit/: config.toml
app/: README.md  __init__.py  color_code_viz.py  live_viz.py  qec_viz.py  requirements.txt  rl_runner.py  rl_strategies.py  streamlit_app.py
app/services/: __init__.py  circuit_services.py  rl_services.py
benchmarks/: __init__.py  cli.py  config.py  models.py  reproduce.md  runner.py
codes/: __init__.py  benchmark.py  interfaces.py  registry.py
codes/bosonic/: __init__.py  (+4 more)
docs/: BENCHMARKING_CONTRACTS.md  README.md  REPO_MERGE_AND_DEPLOYMENT.md  RL_QEC_ARCHITECTURE.md  ising_predecoder_phase1_contract_map.md
introduction_to_stim/: Introduction to Stim Lab.ipynb  getting_started.ipynb  rep_code.py
quantumforge/: README.md
scripts/: bench_runtime_contracts.py  benchmark_decoders.py  ci_contract_verification.sh  plot_threshold.py  plot_training_curves.py  run_streamlit_smoke.py  teraquop_footprint.py  train_sota_rl.py
surface_code_in_stem/: DYNAMIC_CODES.md  __init__.py  confidence_decoding.py  dynamic_surface_codes.py  rl_nested_learning.py  surface_code.py
syndrome_net/: __init__.py  codes.py  container.py  decoders.py  noise.py  parallel.py  registry.py  research.py  testing.py  visualizers.py
tests/: conftest.py  test_architectural_registries.py  test_benchmark_decoder_contracts.py  test_benchmarks.py  test_bosonic.py  test_circuit_determinism.py  test_code_family_plugins.py  test_colour_codes.py  test_confidence_decoding.py  test_cuda_q_decoder.py  test_decoder_registry_backends.py  test_decoder_resolution.py  test_decoders.py  test_gnn_decoders.py  test_gym_env.py  test_integration_pipeline.py  test_ising_predecoder.py  test_jax_decoders.py  test_math_validity_helpers.py  test_noise_models.py  test_qhybrid_backend_fallback.py  test_qldpc_parity.py  test_rl_control.py  test_rl_nested_learning.py  test_rl_services_threshold.py  test_runtime_contracts.py  test_sampling_backend_contracts.py  test_streamlit_backend_metadata.py
(+81 files in other folders)
