[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "syndrome-net"
version = "0.1.0"
description = "Quantum Error Correction + RL Control with Stim"
readme = "Readme.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "stim",
]

[project.optional-dependencies]
rl = ["torch", "gymnasium>=0.29"]
viz = ["streamlit>=1.28", "plotly"]
qiskit = ["qiskit>=1.0", "qiskit-aer>=0.14"]
dev = ["pytest", "maturin", "qhybrid-kernels", "mypy", "hypothesis", "ruff"]

[tool.setuptools]
packages = ["surface_code_in_stem", "codes", "app", "syndrome_net"]
include-package-data = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
implicit_reexport = false
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["stim", "plotly.*", "gymnasium.*", "torch.*", "numpy.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"
