[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "syndrome-net"
version = "0.1.0"
description = "Quantum Error Correction + RL Control with Stim"
readme = "Readme.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "stim",
  "torch",
  "gymnasium>=0.29",
  "qiskit>=1.0",
  "qiskit-aer>=0.14",
  "streamlit>=1.28",
  "plotly",
  "pymatching>=2.1",
  "cudaq",
  "cuquantum",
  "el-loom",
  "jax",
  "jaxlib",
  "qujax",
]

[project.optional-dependencies]
dev = ["pytest", "maturin", "qhybrid-kernels"]

[tool.setuptools]
packages = ["surface_code_in_stem", "codes", "app"]
include-package-data = true

[project.entry-points."syndrome_net.decoders"]
mwpm = "surface_code_in_stem.decoders:MWPMDecoder"
union_find = "surface_code_in_stem.decoders:UnionFindDecoder"
sparse_blossom = "surface_code_in_stem.decoders:SparseBlossomDecoder"
cudaq = "surface_code_in_stem.decoders:CudaQDecoder"
qujax = "surface_code_in_stem.decoders:QuJaxNeuralBPDecoder"
cuqnn = "surface_code_in_stem.decoders:CuQNNBackendAdapterDecoder"
jax_confidence = "surface_code_in_stem.decoders.jax_confidence:JAXConfidenceDecoderAdapter"
